if applied, this updates the mojMenuButton by removing the  GOV.UK button bottom margin from MOJ button menu toggle. This is to ensure that there is not a big gap between the menu button and the menu options.

--- a/src/scss/components/_case_details_header.scss
+++ b/src/scss/components/_case_details_header.scss
@@ -1,6 +1,6 @@
 // Case details header
-.moj-button-menu__wrapper {
-  margin-top: -5px !important;
+.moj-button-menu .moj-button-menu__toggle-button {
+  margin-bottom: 0;
 }
 
 .mcc-error-or-alert {
